--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "main": "index.html",
   "scripts": {
     "start": "node server.js",
-    "dev": "python3 -m http.server 3000"
+    "dev": "node server.js"
   }
 }
